--- a/app/css/ElevationProfile.css
+++ b/app/css/ElevationProfile.css
@@ -29,6 +29,7 @@
     display: flex;
     align-items: center;
     margin-top: -30px;
+    margin-left: 20px;
 }
 .profileDirection {
    height: 35px;
@@ -42,7 +43,7 @@
 }
 .createreportBar {
         margin-left: auto;
-    margin-right: 10px;
+    margin-right: 20px;
 }
 .chartBottomBar {
     display: flex;
